<resources>
    <string name="app_name">EasyFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_rutinas">Rutinas</string>
    <string name="menu_dietas">Dietas</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_contacto">Contactos</string>
    <string name="menu_calendario">Agendar cita</string>

    <!-- Navbar lateral -->
    <string name="text_bienvenido">Bienvenid@</string>
    <string name="nav_logout">Log out</string>

    <!-- El perfil -->
    <string name="text_btn_signout">Sign out</string>

    <!-- El logIn -->
    <string name="menu_login">Login</string>
    <string name="login_nutrilogo">Nutriologo</string>
    <string name="login_entrenador">Entrenador</string>
    <string name="id_1201939183">id: 1201939183</string>
    <string name="actualizar_perfil">Actualizar perfil</string>
    <string name="porcentaje_de_m_sculo">Porcentaje de músculo</string>
    <string name="procentaje_de_grasa">Procentaje de grasa</string>
    <string name="sexo">Sexo</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="email">Email</string>
    <string name="diego_elizalde">Diego Elizalde</string>

</resources>