<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeicon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/profileicon2"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_perfil_nutriologo"
            android:icon="@drawable/profileicon2"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_perfil_entrenador"
            android:icon="@drawable/profileicon2"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_contactos"
            android:icon="@drawable/contacticon"
            android:title="@string/menu_contacto" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/calendaricon"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_dietas"
            android:icon="@drawable/foodicon"
            android:title="@string/menu_dietas" />
        <item
            android:id="@+id/nav_rutinas"
            android:icon="@drawable/routineicon"
            android:title="@string/menu_rutinas" />

    </group>
</menu>