<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.madg.easyfit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_dietas"
            app:destination="@id/nav_dietas" />
        <action
            android:id="@+id/action_nav_home_to_nav_rutinas"
            app:destination="@id/nav_rutinas" />
        <action
            android:id="@+id/action_nav_home_to_acercaDeFragment"
            app:destination="@id/acercaDeFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_perfil"
        android:name="mx.madg.easyfit.ui.Perfiles.PerfilCliente.PerfilClienteFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil_cliente" />

    <fragment
        android:id="@+id/nav_contactos"
        android:name="mx.madg.easyfit.ui.Contactos.ContactosFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_contactos" >
        <action
            android:id="@+id/action_nav_contactos_to_contactoFragment"
            app:destination="@id/contactoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_calendario"
        android:name="mx.madg.easyfit.ui.Calendario.CalendarioFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/calendario_fragment" />
    <fragment
        android:id="@+id/nav_dietas"
        android:name="mx.madg.easyfit.ui.Dieta.Dietas.DietasFragment"
        android:label="@string/menu_dietas"
        tools:layout="@layout/dietas_fragment" >
        <action
            android:id="@+id/action_nav_dietas_to_nav_comida_dia"
            app:destination="@id/nav_comida_dia" />
    </fragment>
    <fragment
        android:id="@+id/nav_rutinas"
        android:name="mx.madg.easyfit.ui.Rutina.Rutinas.NavRutinas"
        android:label="@string/menu_rutinas"
        tools:layout="@layout/nav_rutinas_fragment" >
        <action
            android:id="@+id/action_nav_rutinas_to_opcionesRutinasFragment"
            app:destination="@id/opcionesRutinasFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_comida_dia"
        android:name="mx.madg.easyfit.ui.Dieta.ComidaDia.ComidaDiaFragment"
        android:label="comida_dia_fragment"
        tools:layout="@layout/comida_dia_fragment" >
        <argument
            android:name="comida_dia"
            app:argType="mx.madg.easyfit.Models.DietaDay" />
        <action
            android:id="@+id/action_nav_comida_dia_to_opcionesComidaFragment"
            app:destination="@id/opcionesComidaFragment" />
    </fragment>
    <fragment
        android:id="@+id/opcionesComidaFragment"
        android:name="mx.madg.easyfit.ui.Dieta.OpcionesComida.OpcionesComidaFragment"
        android:label="opciones_comida_fragment"
        tools:layout="@layout/opciones_comida_fragment" >
        <argument
            android:name="opcion_del_dia"
            app:argType="mx.madg.easyfit.Models.DietaMeal" />
        <action
            android:id="@+id/action_opcionesComidaFragment_to_opcionFragment"
            app:destination="@id/opcionFragment" />
    </fragment>
    <fragment
        android:id="@+id/opcionFragment"
        android:name="mx.madg.easyfit.ui.Dieta.Opcion.OpcionFragment"
        android:label="opcion_fragment"
        tools:layout="@layout/opcion_fragment" >
        <argument
            android:name="mi_opcion"
            app:argType="mx.madg.easyfit.Models.DietaOption" />
    </fragment>
    <fragment
        android:id="@+id/opcionesRutinasFragment"
        android:name="mx.madg.easyfit.ui.Rutina.OpcionesRutinas.OpcionesRutinasFragment"
        android:label="opciones_rutinas_fragment"
        tools:layout="@layout/opciones_rutinas_fragment" >
        <argument
            android:name="opciones_rutinas"
            app:argType="mx.madg.easyfit.Models.RutinaDay" />
    </fragment>
    <fragment
        android:id="@+id/contactoFragment"
        android:name="mx.madg.easyfit.ui.Contactos.Contacto.ContactoFragment"
        android:label="contacto_fragment"
        tools:layout="@layout/contacto_fragment" >
        <argument
            android:name="contacto_cliente"
            app:argType="mx.madg.easyfit.Models.Contacto.Contacto" />
        <action
            android:id="@+id/action_contactoFragment_to_dietaVistaNutriologoFragment"
            app:destination="@id/dietaVistaNutriologoFragment" />
    </fragment>
    <fragment
        android:id="@+id/dietaVistaNutriologoFragment"
        android:name="mx.madg.easyfit.ui.Nutriologo.DietaVistaNutriologoFragment"
        android:label="dieta_vista_nutriologo_fragment"
        tools:layout="@layout/dieta_vista_nutriologo_fragment" >
        <argument
            android:name="vista_dieta"
            app:argType="mx.madg.easyfit.Models.Cliente.Cliente" />
    </fragment>
    <fragment
        android:id="@+id/acercaDeFragment"
        android:name="mx.madg.easyfit.AcercaDeFragment"
        android:label="acerca_de_fragment"
        tools:layout="@layout/acerca_de_fragment" />
    <fragment
        android:id="@+id/nav_perfil_entrenador"
        android:name="mx.madg.easyfit.EntrenadorFragment"
        android:label="entrenador_fragment"
        tools:layout="@layout/entrenador_fragment" />
    <fragment
        android:id="@+id/nav_perfil_nutriologo"
        android:name="mx.madg.easyfit.NutriologoFragment"
        android:label="nutriologo_fragment"
        tools:layout="@layout/nutriologo_fragment" />

</navigation>